fix(cors): one policy, read from app.cors.allowed-origins
SecurityConfig hardcoded two localhost origins and ignored
app.cors.allowed-origins (CORS_ALLOWED_ORIGINS), so the one setting an
operator could change did nothing. Fifteen controllers also carried
their own @CrossOrigin, three of them "*"; the security filter answers
first, so those were inert and misleading.

The policy now comes from configuration only, and a wildcard or empty
list fails at startup rather than as a 500 on the first cross-origin
request (credentials are allowed, which forbids "*").

CorsPolicyTest (fast): no @CrossOrigin anywhere; origins used exactly;
wildcard and empty rejected. CorsFilterChainTest (integration, real
filter chain, an origin that appears nowhere in code): allowed origin
passes with credentials, the old localhost and a foreign origin are
refused. Broken once: a reinstated @CrossOrigin and the hardcoded list
each turned the matching assertions red.